2006-07-22  Claudio Fontana  <claudio@gnu.org>

	upgraded gnulib.

2006-07-22  Claudio Fontana  <claudio@gnu.org>

	removed generated files from CVS

	* src/lid.c (get_editor_argv): new function that
	  tokenizes EDITOR environment variable.

	* src/lid.c (report_edit): use get_editor_argv;
	  some cleanup; set using_vi for vim too.

2006-07-06  Claudio Fontana  <claudio@gnu.org>

	* src/Makefile.in: regenerated.
	* src/mkid.c: remove useless (and wrong) const. 

2006-06-26  Claudio Fontana  <claudio@gnu.org>

	* libidu/walker.c (walk_flink): add missing #ifdef HAVE_LINK before
	  calling hard-link specific code (patch #5165).

	* libidu/scanners.c (get_token_perl): fix problem in perl support
	  with comments and quotation.
	  Patch appended to patch #2775 by Madhu Gogulapati.

2006-03-05  Claudio Fontana  <claudio@gnu.org>

	* src/lid.c::isnumber(): fixed bug in pattern recognition.
	  A single 'l' or 'u' does not make a pattern a number.
	  It must come after ciphers.

	* src/lid.c::help_me(): add bug report string
	* src/mkid.c: likewise
	* src/xtokid.c: likewise
	* src/fid.c: likewise
	* src/fnid.c: likewise

2006-02-15  Jim Meyering  <jim@meyering.net>

	* lib/verify.h: New file, from gnulib.

2006-02-15  Claudio Fontana  <claudio@gnu.org>

	* libidu/scanners.c: integrated a lisp+java support patch,
	  based on the original work by Edouard G. Parmelan
	
2006-01-11  Claudio Fontana  <claudio@gnu.org>

	* lib/fnmatch.c, lib/fnmatch_loop.c: included workaround for a
	  possible gcc bug in handling multibyte char sequences.
	  Fix by Paul Eggert <eggert@gnu.org>, problems reported by
	  Nelson H. F. Beebe <beebe@math.utah.edu>

	* src/mkid.c, src/lid.c: replace dirname() and basename() usage
	  with dir_name() and base_name() to fix a portability problem
	  spotted by Nelson H. F. Beebe <beebe@math.utah.edu>

2006-01-08  Claudio Fontana  <claudio@gnu.org>

	* src/mkid.c: fixed bad offtostr usage (now uses return value)
